--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="profile">
         <img src="img/profile.jpg" alt="Profile Photo" class="profile-photo" />
         <b>Welcome</b>
-        <p>Atharva Deosthale</p>
+        <p>Ananya Gupta</p>
         <button class="profile-button">Settings</button>
       </div>
     </div>
