--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         </div>
         <div class="player-icons">
           <div class="song-icon">
-            <img src="img/prev.png" />
+            <img src="img/prev.jpg" />
           </div>
           <div class="song-icon">
-            <img src="img/play.png" />
+            <img src="img/play.jpg" />
           </div>
           <div class="song-icon">
-            <img src="img/forw.png" />
+            <img src="img/forw.jpg" />
           </div>
         </div>
         <div class="player-slider">slider coming soon</div>
@@ -41,7 +41,7 @@
     <!-- Sections -->
     <div class="small-section">
       <div class="logo">
-        <img src="img/logo.png" alt="Music Player Logo" />
+        <img src="img/logo.jpg" alt="Music Player Logo" />
         Music Player
       </div>
       <div class="playlists-container">
